fix layout shift (border shift while hover/checked)

--- a/styles/fields/radio.css
+++ b/styles/fields/radio.css
@@ -9,7 +9,8 @@ label + radio-wrapper {
 }
 
 .radio-inner {
-  border: 1px solid var(--stroke-default);
+  border: 2px solid transparent;
+  outline: 1px solid var(--stroke-default);
   border-radius: .5rem;
 
   display: grid;
@@ -39,7 +40,7 @@ label + radio-wrapper {
   }
 
   &:hover, &:focus-within {
-    border: 1px solid var(--stroke-highlight);
+    outline: 1px solid var(--stroke-highlight);
     
     & .radio-image {
       background-image: url(../../assets/icons/radio-hover.svg);
